[package]
name = "when"
version = "0.1.3"
authors = ["Boris Tatarintsev <ttyv00@gmail.com>"]
edition = "2018"
description = "'When' parses natural language date/time and produces computer friendly output structures"
documentation = "https://github.com/risboo6909/when"
repository = "https://github.com/risboo6909/when"
license = "MIT"
license-file = "LICENSE"

[dependencies.nom]
version = "4.2"

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
strsim = "0.8.0"
time = "0.1"
tuple = "0.4"
failure = "0.1"
num-traits = "0.2.6"
serde = { version = "1.0.91", features = ["derive"] }
